[package]
name = "grsp"
version = "0.1.0"
edition = "2021"
authors = ["Eil <yuanmingchao0718@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
repository = "https://github.com/InkCoderYmc/grsp"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
